feat(hive): add hive metastore to cluster

--- a/config/spark/spark-defaults-yarn.conf
+++ b/config/spark/spark-defaults-yarn.conf
@@ -10,7 +10,6 @@ spark.history.fs.logDirectory                   s3a://spark-data/spark-events
 spark.yarn.historyServer.address                localhost:18080
 spark.history.fs.update.interval                10s
 spark.history.ui.port                           18080
-# listar todos os jars
-spark.jars                                      s3a://spark-data/spark-libs/aws-java-sdk-bundle-1.11.1026.jar,s3a://spark-data/spark-libs/hadoop-aws-3.3.4.jar,s3a://spark-data/spark-libs/delta-spark_2.12-3.2.0.jar,s3a://spark-data/spark-libs/delta-storage-3.2.0.jar
+spark.jars                                      s3a://spark-data/spark-libs/aws-java-sdk-bundle-1.11.1026.jar,s3a://spark-data/spark-libs/hadoop-aws-3.3.4.jar,s3a://spark-data/spark-libs/delta-spark_2.12-3.2.0.jar,s3a://spark-data/spark-libs/delta-storage-3.2.0.jar,s3a://spark-data/spark-libs/hive-exec-3.1.2.jar,s3a://spark-data/spark-libs/hive-exec-3.1.2.jar,s3a://spark-data/spark-libs/hive-metastore-3.1.2.jar
 spark.driver.extraClassPath                     /opt/spark/jars/*.jar
 spark.executor.extraClassPath                   /opt/spark/jars/*.jar
